crates/cli/tests/snapshots/lib__check@non_array_idx.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/non_array_idx.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/non_array_idx.nemo
---
success: false
exit_code: 1
----- stdout -----
[09] Error: Tried to index into a non-array type I32
   ╭─[ tests/check/non_array_idx.nemo:2:11 ]
   │
 2 │   let x = 10[4]
   │           ─┬  
   │            ╰── Tried to index into a non-array type I32
───╯


----- stderr -----
Error: "Check failed with 1 errors"
